--- a/MindWell/app/src/main/res/layout/activity_login.xml
+++ b/MindWell/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Login">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:text="Sign In"
+            android:text="Log In"
             android:textColor="@color/black"
             android:textSize="25dp"
             android:textStyle="bold"></TextView>
@@ -33,41 +33,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:text="Please Sign in to continue."
+            android:text="Please Log in to continue."
             android:textStyle="bold"></TextView>
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginTop="40dp"
-            android:hint="FULL NAME"
-            app:endIconMode="clear_text"
-            app:startIconDrawable="@drawable/ic_baseline_perm_identity_24">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/sign_in_full_name"
-                android:textSize="15dp"
-                android:inputType="text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textStyle="bold" />
-        </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="40dp"
             android:hint="EMAIL"
-            app:prefixTextColor="#473FF5"
             app:startIconDrawable="@drawable/ic_baseline_mail_outline_24">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/sign_in_email"
+                android:id="@+id/login_email"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="15dp"
@@ -80,19 +60,20 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
             android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="15dp"
             android:hint="PASSWORD"
+            app:endIconMode="clear_text"
             app:startIconDrawable="@drawable/ic_baseline_lock_24">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/sign_in_pass"
-                android:textStyle="bold"
-                android:textColor="@color/black"
+                android:id="@+id/login_password"
+                android:inputType="textPassword"
                 android:textSize="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"/>
+                android:textColor="@color/black"
+                android:textStyle="bold" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -116,16 +97,15 @@
                     android:id="@+id/Progressbar"
                     android:layout_toLeftOf="@+id/signsub"
                     android:layout_centerVertical="true"
-
                     ></ProgressBar>
 
                 <TextView
-                    android:id="@+id/signsub"
+                    android:id="@+id/logsub"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_centerInParent="true"
                     android:drawableEnd="@drawable/right_icon"
-                    android:text="SIGN IN"
+                    android:text="LOG IN"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:gravity="center"
@@ -144,7 +124,6 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
@@ -158,30 +137,17 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center_horizontal"
-            android:text="Already have account"
+            android:text="Not have an account"
             android:textSize="16dp"></TextView>
 
         <TextView
-            android:id="@+id/login"
+            android:id="@+id/signin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" Log In"
+            android:text=" Sign In"
             android:textColor="#0D67CC"
             android:textSize="18dp"
             android:textStyle="bold"></TextView>
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
-
 
     </LinearLayout>
 
