--- a/MindWell/app/src/main/res/layout/activity_survey.xml
+++ b/MindWell/app/src/main/res/layout/activity_survey.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/rectangle_background"
-    tools:context=".Home">
+    tools:context=".Survey">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,7 +28,7 @@
             android:textStyle="bold"
             android:layout_marginTop="20dp"
             android:layout_marginHorizontal="30dp"
-            android:textSize="35dp">
+            android:textSize="30dp">
         </TextView>
 
         <TextView
@@ -40,7 +40,7 @@
             android:textStyle="bold"
             android:layout_marginTop="20dp"
             android:layout_marginHorizontal="30dp"
-            android:textSize="23dp">
+            android:textSize="18dp">
         </TextView>
 
         <RadioGroup
@@ -53,12 +53,12 @@
                 android:button="@android:color/transparent"
                 android:textColor="@color/black"
                 android:paddingStart="20dp"
-                android:textSize="20dp"
+                android:textSize="18dp"
                 android:textStyle="bold"
                 android:text="YES"
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:background="@drawable/stroke_background">
 
             </RadioButton>
