--- a/MindWell/app/src/main/res/layout/activity_survey.xml
+++ b/MindWell/app/src/main/res/layout/activity_survey.xml
@@ -86,6 +86,7 @@
             <Button
                 android:id="@+id/submitButton"
                 android:layout_width="match_parent"
+                android:textStyle="bold"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_marginStart="30dp"
