--- a/MindWell/app/src/main/res/values-night/themes.xml
+++ b/MindWell/app/src/main/res/values-night/themes.xml
@@ -11,7 +11,7 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">#AFAFAF</item>
-        <item name="fontFamily">@font/HankenGrotesk</item>
+        <item name="fontFamily">@font/robotoregular</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
