--- a/MindWell/app/src/main/res/layout/activity_survey.xml
+++ b/MindWell/app/src/main/res/layout/activity_survey.xml
@@ -43,6 +43,30 @@
             android:textSize="18dp">
         </TextView>
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/lastQuestion"
+            android:visibility="gone"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="textStart"
+            android:gravity="start"
+            android:layout_marginHorizontal="25dp"
+            android:layout_marginTop="20dp">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:hint="Write something.."
+                android:gravity="start"
+                android:id="@+id/sign_in_full_name"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:inputType="textMultiLine"
+                android:textColor="@color/black"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+        </com.google.android.material.textfield.TextInputLayout>
+
         <RadioGroup
             android:id="@+id/optionsRadioGroup"
             android:layout_width="match_parent"
