--- a/MindWell/app/src/main/res/layout/activity_splash.xml
+++ b/MindWell/app/src/main/res/layout/activity_splash.xml
@@ -12,6 +12,7 @@
         android:layout_height="300dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:scaleType="centerCrop"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,7 +26,7 @@
         android:layout_height="wrap_content"
         android:text="MindWell"
         android:textColor="#F14545"
-        android:textSize="20dp"
+        android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -35,12 +36,12 @@
 
     <TextView
         android:id="@+id/desc"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
+        android:layout_width="280dp"
+        android:layout_height="60dp"
         android:text="Self-identify your mental health by just one quiz"
         android:textAlignment="center"
         android:textColor="#08666A"
-        android:textSize="15dp"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
