--- a/MindWell/app/src/main/res/layout/activity_score.xml
+++ b/MindWell/app/src/main/res/layout/activity_score.xml
@@ -28,6 +28,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:textColor="@color/black"
                 android:id="@+id/score_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
