--- a/MindWell/app/src/main/res/layout/activity_score.xml
+++ b/MindWell/app/src/main/res/layout/activity_score.xml
@@ -3,22 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/score_card1"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginHorizontal="40dp"
+        android:layout_margin="40dp"
         android:elevation="90dp"
-        android:layout_marginTop="20dp"
         app:cardCornerRadius="20dp"
-        app:cardElevation="90dp"
+        app:cardElevation="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints">
-
 
 
         <LinearLayout
@@ -32,10 +31,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="14/08/2004"
                 android:paddingStart="15dp"
-                android:textSize="20dp">
-            </TextView>
+                android:text="14/08/2004"
+                android:textSize="20dp"></TextView>
 
             <LinearLayout
                 android:id="@+id/score_linear2"
