--- a/MindWell/app/src/main/res/layout/activity_score.xml
+++ b/MindWell/app/src/main/res/layout/activity_score.xml
@@ -9,10 +9,11 @@
         android:id="@+id/score_card1"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_margin="40dp"
+        android:layout_marginVertical="20dp"
+        android:layout_marginHorizontal="40dp"
         android:elevation="90dp"
         app:cardCornerRadius="20dp"
-        app:cardElevation="20dp"
+        app:cardElevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
