--- a/MindWell/app/src/main/res/layout/activity_survey.xml
+++ b/MindWell/app/src/main/res/layout/activity_survey.xml
@@ -120,7 +120,7 @@
                 android:background="@drawable/button_background"
                 android:backgroundTint="#2196F3"
                 android:elevation="4dp"
-                android:text="Submit"
+                android:text="Next"
                 android:textColor="#FFFFFF" />
 
         </RelativeLayout>
