--- a/MindWell/app/src/main/res/layout/activity_pscore_display.xml
+++ b/MindWell/app/src/main/res/layout/activity_pscore_display.xml
@@ -11,11 +11,11 @@
         android:id="@+id/pscore_lin1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/recycler_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
             android:layout_width="50dp"
