--- a/MindWell/app/src/main/res/layout/activity_home.xml
+++ b/MindWell/app/src/main/res/layout/activity_home.xml
@@ -8,27 +8,7 @@
     tools:context=".Home">
 
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:elevation="90dp"
-        app:cardElevation="90dp"
-        app:cardCornerRadius="500dp"
-        android:translationY="-290dp"
-        android:translationX="-140dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/home_logo"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/logo"></ImageView>
-
-    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:id="@+id/home_linear1"
@@ -58,27 +38,60 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/home_name"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:text="Harsh Yadav"
-                    android:paddingStart="100dp"
-                    android:textAlignment="textStart"
-                    android:textColor="@color/black"
-                    android:textSize="20dp"
-                    android:textStyle="bold"></TextView>
+                    android:layout_height="100dp"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/home_stage"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="100dp"
-                    android:text="Mental health stage: Normal"
-                    android:textAlignment="textStart"
-                    android:textColor="@color/black"
-                    android:textSize="15dp"></TextView>
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="10dp"
+                        android:elevation="10dp"
+                        app:cardElevation="10dp"
+                        app:cardCornerRadius="500dp">
+
+                        <ImageView
+                            android:id="@+id/home_logo"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/logo"></ImageView>
+
+                    </androidx.cardview.widget.CardView>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/home_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="20dp"
+                            android:text="Tanay Gondaliya"
+                            android:paddingStart="20dp"
+                            android:textAlignment="textStart"
+                            android:textColor="@color/black"
+                            android:textSize="20dp"
+                            android:textStyle="bold"></TextView>
+
+                        <TextView
+                            android:id="@+id/home_stage"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingStart="20dp"
+                            android:text="Mental health stage: Normal"
+                            android:textAlignment="textStart"
+                            android:textColor="@color/black"
+                            android:textSize="15dp"></TextView>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/home_cardquiz"
