--- a/MindWell/app/src/main/res/layout/activity_pscore_display.xml
+++ b/MindWell/app/src/main/res/layout/activity_pscore_display.xml
@@ -13,34 +13,38 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:id="@+id/pscore_back"
+            android:layout_margin="10dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/ic_baseline_chevron_left_24"></ImageView>
 
         <TextView
+            android:id="@+id/pscore_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Harsh Yadav"
-            android:textAlignment="center"
+            android:layout_height="match_parent"
+            android:paddingStart="20dp"
+            android:gravity="center"
+            android:text="Tanay Gondaliya"
+            android:textAlignment="textStart"
             android:textColor="@color/black"
-            android:textSize="20dp"></TextView>
+            android:textSize="20dp"
+            tools:ignore="RtlCompat"></TextView>
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/pscore_lin1"
-        ></androidx.recyclerview.widget.RecyclerView>
+        app:layout_constraintTop_toBottomOf="@+id/pscore_lin1"></androidx.recyclerview.widget.RecyclerView>
 
 
 
