--- a/MindWell/app/src/main/res/layout/activity_pscore_display.xml
+++ b/MindWell/app/src/main/res/layout/activity_pscore_display.xml
@@ -40,6 +40,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_marginTop="10dp"
+        android:paddingBottom="50dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
